# pycapse

./: LICENSE  README.md  pyproject.toml
notebooks/: example.ipynb
src/pycapse/: __init__.py  juliapkg.json  pycapse.py
